The first version of the WEB application

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,8 @@
   <figcaption class="blockquote-footer">
     {{ quote.person }}, {{ quote.work }}
   </figcaption>
+  <div class="mx-auto">
+  <a type="button" class="btn btn-outline-info" href="/all">Show all quotes</a>
+    </div>
 </figure>
 {% endblock %}
