--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,21 +6,14 @@
 <form action="" method="post">
     {{ form.hidden_tag() }}
         <p>
-        {{ form.time.label }}<br>
-        {% for subfield in form.time %}
-        <tr>
-            <td>{{ subfield }}</td>
-            <td>{{ subfield.label }}</td>
-        </tr>
-        {% endfor %}
-        <br><br>
-        {{ form.type.label }}<br>
+        {{ form.type.label }}<br><br>
     {% for subfield in form.type %}
         <tr>
             <td>{{ subfield }}</td>
             <td>{{ subfield.label }}</td>
         </tr>
         {% endfor %}
+    <br><br>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     {{message}}
 </form>
