--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
         {% if current_user.is_authenticated %}
         <a class="btn btn-outline-dark" href="/settings"> Settings </a>
-            <a class="navbar-brand" href="/logout">{{ current_user.email }}</a>
+            <a class="navbar-brand" href="/logout">{{ current_user.user }}</a>
         {% else %}
             <p>
                 <a class="btn btn-outline-primary " href="/register">Registration</a>
