--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             <a class="navbar-brand" href="/logout">{{ current_user.user }}</a>
         {% else %}
             <p>
-                <a class="btn btn-outline-primary " href="/register">Registration</a>
+                <a class="btn btn-outline-primary " href="/register">Sign Up</a>
                 <a class="btn btn-outline-success" href="/login">Log In</a>
             </p>
         {% endif %}
