--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,20 +1,20 @@
-{% extends "base.html" %}
-
-{% block content %}
-<br>
+{% extends "base.html" %} {% block content %}
+<br />
 <h1 style="text-align: center">Settings</h1>
 <form action="" method="post">
-    {{ form.hidden_tag() }}
-        <p>
-        {{ form.type.label }}<br><br>
+  {{ form.hidden_tag() }}
+  <p>
+    {{ form.type.label }}<br /><br />
     {% for subfield in form.type %}
-        <tr>
-            <td>{{ subfield }}</td>
-            <td>{{ subfield.label }}</td>
-        </tr>
-        {% endfor %}
-    <br><br>
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    {{message}}
+    <tr>
+      <td>{{ subfield }}</td>
+      <td>{{ subfield.label }}</td>
+    </tr>
+    {% endfor %}
+    <br /><br />
+  </p>
+
+  <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+  {{message}}
 </form>
 {% endblock %}
