--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,27 @@
-{% extends "base.html" %} {% block content %}
-<br />
-<h1 style="text-align: center">Authorization</h1>
-<form action="" method="post">
-  {{ form.hidden_tag() }}
-  <p>
-    {{ form.email.label }}<br />
-    {{ form.email(class="form-control", type="email") }}<br />
-    {% for error in form.email.errors %}
-  </p>
+{% extends "base.html" %}
 
-  <div class="alert alert-danger" role="alert">{{ error }}</div>
-  {% endfor %}
-  <p>
-    {{ form.password.label }}<br />
-    {{ form.password(class="form-control", type="password") }}<br />
-    {% for error in form.password.errors %}
-  </p>
-
-  <div class="alert alert-danger" role="alert">{{ error }}</div>
-  {% endfor %}
-  <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-  <div>{{ message }}</div>
-</form>
+{% block content %}
+<br>
+    <h1>Authorization</h1>
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.email.label }}<br>
+            {{ form.email(class="form-control", type="email") }}<br>
+            {% for error in form.email.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        <p>
+            {{ form.password.label }}<br>
+            {{ form.password(class="form-control", type="password") }}<br>
+            {% for error in form.password.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+        <div>{{ message }}</div>
+    </form>
 {% endblock %}
