--- a/templates/all_quotes.html
+++ b/templates/all_quotes.html
@@ -12,12 +12,12 @@
     </thead>
 
     <tbody>
-    {% for item in quotes %}
+    {% for item in quotes['quotes'] %}
       <tr>
         <td scope="row">{{loop.index}}</td>
-        <td>{{item.quote}}</td>
-          <td>{{item.person}}</td>
-          <td>{{item.work}}</td>
+        <td>{{item['quote']}}</td>
+          <td>{{item['person']}}</td>
+          <td>{{item['work']}}</td>
       </tr>
     {% endfor %}
     </tbody>
